s7/language_theory/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression
  11            | IF conditional THEN opt_statements END
  12            | IF conditional THEN opt_statements ELSE opt_statements END
  13            | IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements END
  14            | loop_stmt

  15  cell : LBRACKET INT COMMA INT RBRACKET

  16  exps : eval
  17       | cell
  18       | INT
  19       | ID
  20       | LPAREN expression RPAREN

  21  eval : ADD exps
  22       | SUB exps

  23  loop_stmt : FOR ID IN neighborhood DO opt_statements END

  24  neighborhood : MOORE
  25               | VONNEUMANN

  26  prio : exps
  27       | exps MULT prio
  28       | exps DIV prio
  29       | exps MODU prio

  30  expression : prio
  31             | expression ADD prio
  32             | expression SUB prio

  33  conditional : expression EQUALS expression
  34              | expression NOTEQUALS expression
  35              | expression LESSTHAN expression
  36              | expression GREATERTHAN expression
  37              | expression LESSTHANEQUALS expression
  38              | expression GREATERTHANEQUALS expression

  39  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (39)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (39)

	.  reduce 39


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	EOF  reduce 7

	opt_statements  goto 22
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 26


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 27
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (15)

	INT  shift 28
	.  error


state 19
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 29
	.  error


state 20
	statement : IF . conditional THEN opt_statements END  (11)
	statement : IF . conditional THEN opt_statements ELSE opt_statements END  (12)
	statement : IF . conditional THEN opt_statements ELSEIF conditional THEN opt_statements END  (13)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 36
	conditional  goto 37
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 21
	loop_stmt : FOR . ID IN neighborhood DO opt_statements END  (23)

	ID  shift 41
	.  error


state 22
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 42
	.  error


state 23
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	EOF  reduce 7
	END  reduce 7
	ELSE  reduce 7
	ELSEIF  reduce 7

	opt_statements  goto 43
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 24
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 44
	.  error


state 25
	statement : loop_stmt .  (14)

	.  reduce 14


state 26
	fields : fields COMMA field .  (5)

	.  reduce 5


state 27
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 45
	.  error


state 28
	cell : LBRACKET INT . COMMA INT RBRACKET  (15)

	COMMA  shift 46
	.  error


state 29
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 47
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 30
	eval : ADD . exps  (21)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 48
	eval  goto 39


state 31
	eval : SUB . exps  (22)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 49
	eval  goto 39


state 32
	exps : LPAREN . expression RPAREN  (20)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 50
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 33
	exps : ID .  (19)

	.  reduce 19


state 34
	exps : INT .  (18)

	.  reduce 18


state 35
	exps : cell .  (17)

	.  reduce 17


state 36
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression . EQUALS expression  (33)
	conditional : expression . NOTEQUALS expression  (34)
	conditional : expression . LESSTHAN expression  (35)
	conditional : expression . GREATERTHAN expression  (36)
	conditional : expression . LESSTHANEQUALS expression  (37)
	conditional : expression . GREATERTHANEQUALS expression  (38)

	ADD  shift 51
	SUB  shift 52
	EQUALS  shift 53
	NOTEQUALS  shift 54
	LESSTHAN  shift 55
	GREATERTHAN  shift 56
	LESSTHANEQUALS  shift 57
	GREATERTHANEQUALS  shift 58
	.  error


state 37
	statement : IF conditional . THEN opt_statements END  (11)
	statement : IF conditional . THEN opt_statements ELSE opt_statements END  (12)
	statement : IF conditional . THEN opt_statements ELSEIF conditional THEN opt_statements END  (13)

	THEN  shift 59
	.  error


state 38
	prio : exps .  (26)
	prio : exps . MULT prio  (27)
	prio : exps . DIV prio  (28)
	prio : exps . MODU prio  (29)

	MULT  shift 60
	DIV  shift 61
	MODU  shift 62
	EOF  reduce 26
	END  reduce 26
	LBRACKET  reduce 26
	ADD  reduce 26
	SUB  reduce 26
	RPAREN  reduce 26
	ID  reduce 26
	IF  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	ELSEIF  reduce 26
	EQUALS  reduce 26
	NOTEQUALS  reduce 26
	LESSTHAN  reduce 26
	GREATERTHAN  reduce 26
	LESSTHANEQUALS  reduce 26
	GREATERTHANEQUALS  reduce 26
	FOR  reduce 26


state 39
	exps : eval .  (16)

	.  reduce 16


state 40
	expression : prio .  (30)

	.  reduce 30


state 41
	loop_stmt : FOR ID . IN neighborhood DO opt_statements END  (23)

	IN  shift 63
	.  error


state 42
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 43
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 44
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 64
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 45
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 46
	cell : LBRACKET INT COMMA . INT RBRACKET  (15)

	INT  shift 65
	.  error


state 47
	statement : ID ASSIGN expression .  (10)
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)

	ADD  shift 51
	SUB  shift 52
	EOF  reduce 10
	END  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	ELSEIF  reduce 10
	FOR  reduce 10


state 48
	eval : ADD exps .  (21)

	.  reduce 21


state 49
	eval : SUB exps .  (22)

	.  reduce 22


state 50
	exps : LPAREN expression . RPAREN  (20)
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)

	ADD  shift 51
	SUB  shift 52
	RPAREN  shift 66
	.  error


state 51
	expression : expression ADD . prio  (31)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 38
	eval  goto 39
	prio  goto 67


state 52
	expression : expression SUB . prio  (32)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 38
	eval  goto 39
	prio  goto 68


state 53
	conditional : expression EQUALS . expression  (33)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 69
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 54
	conditional : expression NOTEQUALS . expression  (34)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 70
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 55
	conditional : expression LESSTHAN . expression  (35)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 71
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 56
	conditional : expression GREATERTHAN . expression  (36)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 72
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 57
	conditional : expression LESSTHANEQUALS . expression  (37)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 73
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 58
	conditional : expression GREATERTHANEQUALS . expression  (38)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 74
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 59
	statement : IF conditional THEN . opt_statements END  (11)
	statement : IF conditional THEN . opt_statements ELSE opt_statements END  (12)
	statement : IF conditional THEN . opt_statements ELSEIF conditional THEN opt_statements END  (13)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	END  reduce 7
	ELSE  reduce 7
	ELSEIF  reduce 7

	opt_statements  goto 75
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 60
	prio : exps MULT . prio  (27)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 38
	eval  goto 39
	prio  goto 76


state 61
	prio : exps DIV . prio  (28)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 38
	eval  goto 39
	prio  goto 77


state 62
	prio : exps MODU . prio  (29)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	exps  goto 38
	eval  goto 39
	prio  goto 78


state 63
	loop_stmt : FOR ID IN . neighborhood DO opt_statements END  (23)

	MOORE  shift 79
	VONNEUMANN  shift 80
	.  error

	neighborhood  goto 81


state 64
	statement : cell ASSIGN expression .  (9)
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)

	ADD  shift 51
	SUB  shift 52
	EOF  reduce 9
	END  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9
	IF  reduce 9
	ELSE  reduce 9
	ELSEIF  reduce 9
	FOR  reduce 9


state 65
	cell : LBRACKET INT COMMA INT . RBRACKET  (15)

	RBRACKET  shift 82
	.  error


state 66
	exps : LPAREN expression RPAREN .  (20)

	.  reduce 20


state 67
	expression : expression ADD prio .  (31)

	.  reduce 31


state 68
	expression : expression SUB prio .  (32)

	.  reduce 32


state 69
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression EQUALS expression .  (33)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 33


state 70
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression NOTEQUALS expression .  (34)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 34


state 71
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression LESSTHAN expression .  (35)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 35


state 72
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression GREATERTHAN expression .  (36)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 36


state 73
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression LESSTHANEQUALS expression .  (37)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 37


state 74
	expression : expression . ADD prio  (31)
	expression : expression . SUB prio  (32)
	conditional : expression GREATERTHANEQUALS expression .  (38)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 38


state 75
	statement : IF conditional THEN opt_statements . END  (11)
	statement : IF conditional THEN opt_statements . ELSE opt_statements END  (12)
	statement : IF conditional THEN opt_statements . ELSEIF conditional THEN opt_statements END  (13)

	END  shift 83
	ELSE  shift 84
	ELSEIF  shift 85
	.  error


state 76
	prio : exps MULT prio .  (27)

	.  reduce 27


state 77
	prio : exps DIV prio .  (28)

	.  reduce 28


state 78
	prio : exps MODU prio .  (29)

	.  reduce 29


state 79
	neighborhood : MOORE .  (24)

	.  reduce 24


state 80
	neighborhood : VONNEUMANN .  (25)

	.  reduce 25


state 81
	loop_stmt : FOR ID IN neighborhood . DO opt_statements END  (23)

	DO  shift 86
	.  error


state 82
	cell : LBRACKET INT COMMA INT RBRACKET .  (15)

	.  reduce 15


state 83
	statement : IF conditional THEN opt_statements END .  (11)

	.  reduce 11


state 84
	statement : IF conditional THEN opt_statements ELSE . opt_statements END  (12)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	END  reduce 7

	opt_statements  goto 87
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 85
	statement : IF conditional THEN opt_statements ELSEIF . conditional THEN opt_statements END  (13)

	LBRACKET  shift 18
	ADD  shift 30
	SUB  shift 31
	LPAREN  shift 32
	ID  shift 33
	INT  shift 34
	.  error

	cell  goto 35
	expression  goto 36
	conditional  goto 88
	exps  goto 38
	eval  goto 39
	prio  goto 40


state 86
	loop_stmt : FOR ID IN neighborhood DO . opt_statements END  (23)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	END  reduce 7

	opt_statements  goto 89
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 87
	statement : IF conditional THEN opt_statements ELSE opt_statements . END  (12)

	END  shift 90
	.  error


state 88
	statement : IF conditional THEN opt_statements ELSEIF conditional . THEN opt_statements END  (13)

	THEN  shift 91
	.  error


state 89
	loop_stmt : FOR ID IN neighborhood DO opt_statements . END  (23)

	END  shift 92
	.  error


state 90
	statement : IF conditional THEN opt_statements ELSE opt_statements END .  (12)

	.  reduce 12


state 91
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN . opt_statements END  (13)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	IF  shift 20
	FOR  shift 21
	END  reduce 7

	opt_statements  goto 93
	statement  goto 23
	cell  goto 24
	loop_stmt  goto 25


state 92
	loop_stmt : FOR ID IN neighborhood DO opt_statements END .  (23)

	.  reduce 23


state 93
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements . END  (13)

	END  shift 94
	.  error


state 94
	statement : IF conditional THEN opt_statements ELSEIF conditional THEN opt_statements END .  (13)

	.  reduce 13


38 terminals, 16 nonterminals
40 grammar rules, 95 states
